<resources>
    <string name="app_name">Image Compression</string>
    <string name="take_picture">Take Picture</string>
    <string name="image_size">Image Size</string>
    <string name="image_compressed">Image Compressed</string>
    <string name="resolution">Resolution</string>
    <string name="compressed_resolution">Compressed Resolution</string>
    <string name="orientation">Orientation</string>
</resources>
